# qmm

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  demo.py  pyproject.toml
docs/: background.rst  conf.py  extend.rst  index.html  index.rst  installation.rst  mmq.html  operators.html  operators.rst  qmm.rst  requirements.txt  tutorial.rst  usage.rst
mmq/: mmq.py  operators.py
mmqmg/: crit.py  mmqmg.py  operators.py
qmm/: __init__.py  operators.py  qmm.py
