[tool.poetry]
name = "qmm"
version = "0.10.0"
description = "Quadratic Majorize-Minimize Python toolbox"
authors = ["François Orieux <francois.orieux@universite-paris-saclay.fr>", "Ralph Abirizk  <ralph.abirizk@universite-paris-saclay.fr>"]
maintainers = ["François Orieux <francois.orieux@universite-paris-saclay.fr>"]
readme = "README.rst"
license = "GPL-3.0-or-later"
homepage = "https://qmm.readthedocs.io/en/stable/"
documentation = "https://qmm.readthedocs.io/en/stable/"
repository = "https://github.com/forieux/qmm/"
keywords = ["optimization", "MM", "surogate", "criterion", "objective", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed", ]
include = ["LICENSE"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/forieux/qmm/issues"
"Author webpage" = "https://pro.orieux.fr/"

[tool.poetry.dependencies]
python = "^3.7,<3.10"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
jedi = "0.17.2"
matplotlib = "^3.3.3"
Sphinx = "^3.5.1"
sphinx-rtd-theme = "^0.5.1"
sphinx-autodoc-typehints = "^1.11.1"
twine = "^3.3.0"
rstcheck = "^3.3.1"
readme-renderer = "^29.0"
mypy = "^0.812"
pytest = "^6.2.3"
udft = "^3.2.1"
scipy = "^1.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-parents = 10
disable = [
  "bad-continuation",
  "line-too-long", ]
